# bmstu_AA

./: .gitignore
docs/: .gitignore  00-preambule.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  biblio.bib  main.tex  makefile
docs/parts/: 00-packages.tex  01-title.tex  02-contents.tex  03-introduction.tex  03-task.tex  04-analysis.tex  04-graphs.tex  05-construction.tex  05-design.tex  06-implementation.tex  06-technological.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  09-application.tex  X.tex  biblio.bib  lib.bib  lib.tex  main.fdb_latexmk  main.fls  main.tex  makefile
docs/parts/inc/lst/: Async.cpp  Linear.cpp  antAlg.py  atom_queue.hpp  bin_s.cpp  combAlg.py  compute_evd.cpp  findProbs.py  gauss.cpp  handler_1.cpp  handler_2.cpp  handler_3.cpp  lin_s.cpp  merge.cpp  svd.cpp  updPher.py  utils.cpp
prog/: CMakeLists.txt  algorithms.py  constants.py  csv_work.py  gen_data.py  main.py  measure.py  table.cpp  table.hpp  utils.py
prog/data/: cities.csv  gen.csv  real.csv
prog/gtests/: CMakeLists.txt  main.cpp
prog/gtests/tests/: findTests.cpp  sortTests.cpp  sortingTests.cpp  testsForLength.cpp  testsMatrixMul.cpp
prog/src/: CMakeLists.txt  atomic_queue.h  conveyor.cpp  conveyor.hpp  csvFile.h  find.cpp  find.hpp  main.cpp  semaphore.h  sort.cpp  sort.hpp  sorts.cpp  sorts.h  table.cpp  table.hpp  time.cpp  time.hpp  timings.cpp  timings.h
